--- a/WebApp/Views/Cliente/Index.cshtml
+++ b/WebApp/Views/Cliente/Index.cshtml
@@ -1,21 +1,10 @@
-﻿@model IEnumerable<LogicaNegocio.Entidades.Articulo>
+﻿@model IEnumerable<LogicaNegocio.Entidades.Cliente>
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-@if (@ViewBag.Mensaje != null)
-{
-    <div class="alert alert-success" role="alert">
-        <p>@ViewBag.Mensaje</p>
-    </div>
-}
 
 <div class="input-group">
     <div class="form-outline" data-mdb-input-init>
@@ -27,6 +16,9 @@
     </button>
 </div>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -34,19 +26,10 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Nombre)
+                @Html.DisplayNameFor(model => model.RazonSoc)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Precio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Stock)
+                @Html.DisplayNameFor(model => model.Rut)
             </th>
             <th></th>
         </tr>
@@ -58,19 +41,10 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
+                @Html.DisplayFor(modelItem => item.RazonSoc)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Codigo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Precio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stock)
+                @Html.DisplayFor(modelItem => item.Rut)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
