--- a/WebApp/Views/Usuario/Create.cshtml
+++ b/WebApp/Views/Usuario/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear Usuario</h1>
 
 <h4>Usuario</h4>
 <hr />
@@ -34,12 +34,7 @@
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Discriminator" class="control-label"></label>
-                <input asp-for="Discriminator" class="form-control" />
-                <span asp-validation-for="Discriminator" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
