--- a/WebApp/Views/Usuario/Login.cshtml
+++ b/WebApp/Views/Usuario/Login.cshtml
@@ -1,17 +1,16 @@
-﻿@using LogicaNegocio.CarpetaDtos
-@model AdminDto
+﻿@model LogicaNegocio.CarpetaDtos.UsuarioDto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Login";
 }
 
-<h1>Crear Usuario</h1>
+<h1>Login</h1>
 
-<h4>Usuario</h4>
+<h4>UsuarioDto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Mail" class="control-label"></label>
@@ -19,29 +18,19 @@
                 <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Contrasenia" class="control-label"></label>
                 <input asp-for="Contrasenia" class="form-control" />
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="Home">Volver</a> 
 </div>
 
 @section Scripts {
