--- a/WebApp/Views/Cliente/Index.cshtml
+++ b/WebApp/Views/Cliente/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LogicaNegocio.Entidades.Cliente>
+﻿@model IEnumerable<LogicaNegocio.CarpetaDtos.ClienteDto>
 
 @{
     ViewData["Title"] = "Index";
@@ -11,25 +11,18 @@
         <p>@ViewBag.Mensaje</p>
     </div>
 }
+<div>
+    <form action="/cliente/ObtenerPorRut">
+        <input type="text" name="rut" placeholder="Ingrese RUT a buscar">
+        <button type="submit">Buscar</button>
+    </form>
+</div>
 
-<form action="/cliente/ObtenerPorRut">
-    <input type="text" name="rut" placeholder="Ingrese RUT a buscar">
-    <button type="submit">Buscar</button>
-</form>
-
-<form action="/cliente/ObtenerPorMonto">
-    <input type="number" name="monto" placeholder="Ingrese monto a buscar">
-    <button type="submit">Buscar</button>
-</form>
-
-<div class="input-group">
-    <div class="form-outline" data-mdb-input-init>
-        <input type="search" id="form1" class="form-control" />
-        <label class="form-label" for="form1">Search</label>
-    </div>
-    <button type="button" class="btn btn-primary" data-mdb-ripple-init>
-        <i class="fas fa-search"></i>
-    </button>
+<div>
+    <form action="/cliente/ObtenerPorMonto">
+        <input type="number" name="monto" placeholder="Ingrese monto a buscar">
+        <button type="submit">Buscar</button>
+    </form>
 </div>
 
 <table class="table">
