--- a/WebApp/Views/Usuario/Login.cshtml
+++ b/WebApp/Views/Usuario/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LogicaNegocio.CarpetaDtos.UsuarioDto
+﻿@model LogicaNegocio.CarpetaDtos.AdminDto
 
 @{
     ViewData["Title"] = "Login";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form method="post" asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Mail" class="control-label"></label>
