--- a/WebApp/Views/Usuario/Index.cshtml
+++ b/WebApp/Views/Usuario/Index.cshtml
@@ -52,10 +52,10 @@
                 @Html.DisplayFor(modelItem => item.Mail)
             </td>
             <th>
-                @Html.DisplayNameFor(model => model.Nombre)
+                @Html.DisplayFor(modelItem => item.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Apellido)
+                @Html.DisplayFor(modelItem => item.Apellido)
             </th>
             <td>
                 @Html.DisplayFor(modelItem => item.Contrasenia)
