--- a/WebApp/Views/Articulo/Create.cshtml
+++ b/WebApp/Views/Articulo/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model LogicaNegocio.Entidades.Articulo
-
+﻿@using LogicaNegocio.CarpetaDtos
+@model ArticuloDto
 @{
     ViewData["Title"] = "Create";
 }
