--- a/WebApp/Views/Articulo/Index.cshtml
+++ b/WebApp/Views/Articulo/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<LogicaNegocio.Entidades.Articulo>
+﻿@using LogicaNegocio.CarpetaDtos
+@model IEnumerable<ArticuloDto>
 
 @{
     ViewData["Title"] = "Index";
