--- a/WebApp/Views/Cliente/Index.cshtml
+++ b/WebApp/Views/Cliente/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<LogicaNegocio.CarpetaDtos.ClienteDto>
-
+﻿@using LogicaNegocio.CarpetaDtos
+@model IEnumerable<ClienteDto>
 @{
     ViewData["Title"] = "Index";
 }
