FIX Expresiones regulares, encriptado y Pedido desarrollado

--- a/WebApp/Views/Usuario/Create.cshtml
+++ b/WebApp/Views/Usuario/Create.cshtml
@@ -9,6 +9,13 @@
 
 <h4>Usuario</h4>
 <hr />
+
+@if (ViewBag.Mensaje != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <p>@ViewBag.Mensaje</p>
+    </div>
+}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -41,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
 
 @section Scripts {
