--- a/WebApp/Views/Usuario/Index.cshtml
+++ b/WebApp/Views/Usuario/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Usuario</a>
 </p>
 
 @if (@ViewBag.Mensaje != null)
@@ -64,9 +64,8 @@
                 @Html.DisplayFor(modelItem => item.Discriminator)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
             </td>
         </tr>
 }
