--- a/WebApp/Views/Usuario/Delete.cshtml
+++ b/WebApp/Views/Usuario/Delete.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro que desea borrar este Usuario?</h3>
 <div>
     <h4>Usuario</h4>
     <hr />
@@ -51,7 +51,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver</a>
     </form>
 </div>
