--- a/WebApp/Views/Usuario/Login.cshtml
+++ b/WebApp/Views/Usuario/Login.cshtml
@@ -5,7 +5,12 @@
 }
 
 <h1>Login</h1>
-
+@if (ViewBag.Mensaje != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <p>@ViewBag.Mensaje</p>
+    </div>
+}
 <hr />
 <div class="row">
     <div class="col-md-4">
