--- a/WebApp/Views/Pedido/Index.cshtml
+++ b/WebApp/Views/Pedido/Index.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Mensaje != null)
 {
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-success" role="alert">
         <p>@ViewBag.Mensaje</p>
     </div>
 }
