V 12-5 con API pedidos

--- a/WebApp/Views/Cliente/Index.cshtml
+++ b/WebApp/Views/Cliente/Index.cshtml
@@ -12,8 +12,8 @@
     </div>
 }
 <div>
-    <form action="/cliente/ObtenerPorRut">
-        <input type="text" name="rut" placeholder="Ingrese RUT a buscar">
+    <form action="/cliente/ObtenerPorRS">
+        <input type="text" name="rut" placeholder="Ingrese texto a buscar">
         <button type="submit" class="btn btn-primary">Buscar</button>
     </form>
 </div>
