--- a/WebApp/Views/Cliente/Index.cshtml
+++ b/WebApp/Views/Cliente/Index.cshtml
@@ -13,7 +13,7 @@
 }
 <div>
     <form action="/cliente/ObtenerPorRS">
-        <input type="text" name="rut" placeholder="Ingrese texto a buscar">
+        <input type="text" name="rs" placeholder="Ingrese texto a buscar">
         <button type="submit" class="btn btn-primary">Buscar</button>
     </form>
 </div>
