--- a/WebApp/Views/Pedido/CatalogoComun.cshtml
+++ b/WebApp/Views/Pedido/CatalogoComun.cshtml
@@ -33,7 +33,7 @@
 
 <div class="card" style="width: 18rem;">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cantidad de Item: @ViewBag.cantidad</li>
+        <li class="list-group-item">Cantidad de Artículos: @ViewBag.cantidad</li>
         <li class="list-group-item">Monto Subtotal: @ViewBag.total</li>
     </ul>
 </div>
@@ -96,7 +96,6 @@
     </tbody>
 </table>
 <div >
-    <button type="button" class="btn btn-primary" id="btnLimpiar">Limpiar</button>
     <button type="button" class="btn btn-primary" id="btnVer">Ver</button>
 </div>
 @if (ViewBag.catalogo != null)
@@ -108,16 +107,16 @@
             <thead>
                 <tr>
                     <th>
-                        Id Articulo
+                        Id Artículo
                     </th>
                     <th>
                         Nombre
                     </th>
                     <th>
-                        Descripcion
+                        Descripción
                     </th>
                     <th>
-                        Codigo
+                        Código
                     </th>
                     <th>
                         Cantidad
