--- a/WebApp/Views/Usuario/Index.cshtml
+++ b/WebApp/Views/Usuario/Index.cshtml
@@ -13,7 +13,7 @@
 
 @if (@ViewBag.Mensaje != null)
 {
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-secondary" role="alert">
         <p>@ViewBag.Mensaje</p>
     </div>
 }
