--- a/WebApp/Views/Articulo/Create.cshtml
+++ b/WebApp/Views/Articulo/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear Artículo</h1>
 
-<h4>Articulo</h4>
 
 @if (@ViewBag.Mensaje != null)
 {
