--- a/WebApp/Views/Usuario/Edit.cshtml
+++ b/WebApp/Views/Usuario/Edit.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Contrasenia" class="control-label"></label>
+                <label asp-for="Contrasenia" class="control-label">Contraseña</label>
                 <input asp-for="Contrasenia" class="form-control" />
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
