--- a/WebApp/Views/Usuario/Index.cshtml
+++ b/WebApp/Views/Usuario/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Usuarios</h1>
 
 <p>
     <a asp-action="Create">Crear Usuario</a>
@@ -34,10 +34,10 @@
                 @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Contrasenia)
+                Contraseña
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Discriminator)
+                Tipo Usuario
             </th>
             <th></th>
         </tr>
